Make bin contents viewable in warehouse viewer
Clicking on a bin now lists the contents and quantities on a table.

--- a/warehouse-view.css
+++ b/warehouse-view.css
@@ -42,3 +42,16 @@
 	grid-template-rows: repeat(10, var(--tile));
 	grid-template-columns: repeat(10, var(--tile));
 }
+
+table {
+	width: calc(5*var(--tile));
+	height: calc(10*var(--tile));
+}
+
+table, th, td {
+	border: 1px solid black;
+}
+
+#layout-div {
+	display: flex;
+}
