--- a/warehouse-view.css
+++ b/warehouse-view.css
@@ -1,10 +1,13 @@
 :root {
 	--tile: 8vmin;
+	--stock-bin-edge: 0.75vmin;
 }
 
 .tile {
 	margin: 0;
+	border: 0;
 	padding: 0;
+	box-sizing: border-box;
 	width: var(--tile);
 	height: var(--tile);
 	font-size: 3vmin;
@@ -22,10 +25,6 @@
 	background-color: black;
 }
 
-.bin {
-	background-color: gold;
-}
-
 .picker {
 	background-color: cyan;
 }
@@ -38,9 +37,43 @@
 	background-color: brown;
 }
 
+.stock-bin-error {
+	background-color: gold;
+}
+
+.stock-bin-up {
+	background-color: gold;
+	border-top: var(--stock-bin-edge) dotted black;
+	border-right: var(--stock-bin-edge) solid black;
+	border-bottom: var(--stock-bin-edge) solid black;
+	border-left: var(--stock-bin-edge) solid black;
+}
+
+.stock-bin-down {
+	background-color: gold;
+	border-top: var(--stock-bin-edge) solid black;
+	border-right: var(--stock-bin-edge) solid black;
+	border-bottom: var(--stock-bin-edge) dotted black;
+	border-left: var(--stock-bin-edge) solid black;
+}
+
+.stock-bin-left {
+	background-color: gold;
+	border-top: var(--stock-bin-edge) solid black;
+	border-right: var(--stock-bin-edge) solid black;
+	border-bottom: var(--stock-bin-edge) solid black;
+	border-left: var(--stock-bin-edge) dotted black;
+}
+
+.stock-bin-right {
+	background-color: gold;
+	border-top: var(--stock-bin-edge) solid black;
+	border-right: var(--stock-bin-edge) dotted black;
+	border-bottom: var(--stock-bin-edge) solid black;
+	border-left: var(--stock-bin-edge) solid black;
+}
+
 #warehouse-div {
-	margin: 0;
-	padding: 0;
 	width: calc(10*var(--tile));
 	height: calc(10*var(--tile));
 	display: grid;
