--- a/warehouse-view.css
+++ b/warehouse-view.css
@@ -43,7 +43,8 @@
 }
 
 .wall {
-	background-color: black;
+	background-color: maroon;
+	background-image: url(./graphics/brick.svg);
 }
 
 .picker {
@@ -148,6 +149,7 @@ td {
 	border: 1px solid var(--color-borders);
 	color: white;
 	font-size: var(--font-sizing);
+	padding-left: calc(var(--tile)/4);
 }
 
 #info-div {
