--- a/view/index.html
+++ b/view/index.html
@@ -1,8 +1,8 @@
 <html>
 	<head>
-		<title>Warehouse-View</title>
+		<title>Distribution-Centre</title>
 		<meta charset="utf-8"/>
-		<link rel="stylesheet" href="warehouse-view.css"/>
+		<link rel="stylesheet" href="view.css"/>
 	</head>
 	<body>
 		<div id="layout-div">
@@ -27,7 +27,7 @@
 		</div>
 		<div id="hidden-content">
 			<div id="inner-content">
-				<h1>Automated-Order-Picker</h1><br>
+				<h1>Distribution-Centre</h1><br>
 				<h2>Contact</h2><br>
 				<p>
 					<i>Author:</i> Steven Joshua Klickermann<br>
@@ -37,11 +37,11 @@
 				<h2>License</h2><br>
 				<p>
 					This project is licensed under the terms of the GNU General Public License v3.0.
-					The full project source code and license is available at <a href="https://github.com/sjklick/Automated-Order-Picker">https://github.com/sjklick/Automated-Order-Picker</a>.
+					The full project source code and license is available at <a href="https://github.com/sjklick/Distribution-Centre">https://github.com/sjklick/Distribution-Centre</a>.
 				</p><br>
 				<button onclick="toggle_hidden_content()">Ok</button>
 			</div>
 		</div>
-		<script src="warehouse-view.js"></script>
+		<script src="view.js"></script>
 	</body>
 </html>
